--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Мой сайт</title>
+    <title>ТДБ</title>
 </head>
 <body>
-    <h1>Привет, мир!</h1>
-    <p>Это мой первый сайт на GitHub Pages.</p>
+    <h1>КНИГА НАШЕГО АДМИНА</h1>
+    <p>https://telegra.ph/MOZG-TANCUYUSHCHIJ-V-KISLOTE-06-17</p>
 </body>
 </html>
